Fixed Alignment Issues

--- a/style.css
+++ b/style.css
@@ -959,10 +959,6 @@ nav {
 }
 
 @media (max-width: 768px) {
-  * {
-    overflow-x: hidden;
-  }
-
   .landing {
     height: 90vh;
   }
@@ -977,12 +973,13 @@ nav {
   .header h1 {
     margin: 0;
     margin-top: 5%;
+    margin-left: 2%;
     text-align: left;
-    font-size: 16.5vw;
+    font-size: 15vw;
   }
 
   .rw-words-1 span {
-    font-size: 25vw;
+    font-size: 23vw;
     margin-top: -5%;
     margin-left: -20%;
   }
@@ -992,11 +989,11 @@ nav {
   }
 
   .rw-words-1 span:nth-child(4) {
-    margin-left: -37%;
+    margin-left: -33%;
   }
 
   .rw-words-1 span:nth-child(5) {
-    margin-left: -40%;
+    margin-left: -36%;
   }
 
   .rw-words-1 span:nth-child(6) {
@@ -1023,8 +1020,8 @@ nav {
 
   .subtext {
     margin-top: 25%;
-    margin-left: -32%;
-    font-size: 5vw;
+    margin-left: -33%;
+    font-size: 4.8vw;
   }
 
   .webapp1 {
@@ -1431,6 +1428,14 @@ nav {
     font-family: "RadioGrotesk Regular";
     color: #fff;
     font-size: 5vw;
+  }
+
+  .secure {
+    height: 150vh;
+  }
+
+  .about {
+    height: 230vh;
   }
 }
 /*
